# palantir

./: README.md  dummy_simulation.ipynb  ithil_simulation.ipynb  pyproject.toml
palantir/: clock.py  constants.py  db.py  ithil.py  liquidator.py  main.py  metrics.py  oracle.py  palantir.py  simulation.py  trader.py  types.py  util.py
palantir/crawlers/: coingecko.py
tests/: test_ithil.py
