[tool.poetry]
name = "palantir"
version = "0.1.0"
description = ""
authors = ["Devs <devs@ithil.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
argparse = "^1.4.0"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
crawler = "palantir.main:run_crawler"
simulation = "palantir.main:run_simulation"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
